--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_logged">LoggedActivity</string>
     <string name="logged_in_static">You\'re logged in as:</string>
+
+    <string name="logout_settings">Logout</string>
+
 </resources>
