--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources>
     <string name="app_name">Twear</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_logged">LoggedActivity</string>
+    <string name="title_activity_logged"></string>
     <string name="logged_in_static">You\'re logged in as:</string>
 
     <string name="logout_settings">Logout</string>
-    <string name="title_activity_selector">SelectorActivity</string>
-    <string name="title_activity_tweet">TweetActivity</string>
+    <string name="title_activity_selector"></string>
+    <string name="title_activity_tweet"></string>
 
 </resources>
