--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Twear</string>
-    <string name="app_description">Twitter Client for android Wear</string>
+    <string name="app_description">Twitter client for Android Wear</string>
     <string name="action_settings">Settings</string>
     <string name="logged_in_static">You\'re logged as:</string>
 
